# ResumeIQ

resume_screener/: .agent.md  .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  app.py  config.py  db.py  docker-compose.yml  extractors.py  nlp.py  pyproject.toml  requirements.txt  routes.py  run_server.py  run_tests.ps1  run_tests.sh  screener.db  utils.py
resume_screener/backend/: __main__.py  config.py  db.py  extractors.py  nlp.py  routes.py  utils.py
resume_screener/docs/: README.md  backend.md  frontend.md  setup.md  testing.md
resume_screener/frontend/: README.md  index.html  package-lock.json  package.json
resume_screener/frontend/src/: App.jsx  styles.css
resume_screener/legacy_frontend/static/css/: style.css
resume_screener/legacy_frontend/static/js/: app.js
resume_screener/legacy_frontend/templates/: base.html  index.html
resume_screener/resume_nlp/: __init__.py  core.py
resume_screener/templates/: index.html
resume_screener/tests/: conftest.py  test_config.py  test_extractors.py  test_nlp.py  test_routes.py  test_utils.py
