[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "resumeiq"
version = "0.1.0"
description = "AI-powered resume screening and candidate ranking application."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "Flask==3.1.1",
  "Werkzeug==3.1.3",
  "nltk==3.9.1",
  "scikit-learn==1.7.2",
  "numpy==2.3.5",
  "pandas==2.3.3",
  "pypdf==5.4.0",
  "docx2txt==0.8",
  "waitress==3.0.2",
]

[tool.black]
line-length = 88
include = '\.pyi?$'

[tool.isort]
profile = "black"
